--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+    
 <head>
+    <img src="banner.jpeg">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Home</title>
 </head>
 <body>
-    <h1>Hello World</h1>
-    <p>To Learn more about be  <a href="aboutme.html">click here</a><c</p>
+    <a href="index.html"><img src="Home.png"></a>
+    <a href="aboutme.html"><img src="AboutMe.png"></a>
+    <a href="javascripts.html"><img src="Javascripts.png"></a>
+    <h1>Welcome to My Website!</h1>
+    <p>Hello my name is Brendan Marrone. This is a website that I created while taking the CSC 106 class at The University of Rhode Island. This Website contains all of the code that I have written for this class, and all of the projects that I have and will be working on.</p>
 </body>
 </html>
