--- a/aboutme.html
+++ b/aboutme.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <img src="banner.jpeg">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About me</title>
 </head>
 <body>
-    <h1>About me</h1>
+    <a href="index.html"><img src="Home.png"></a>
+    <a href="aboutme.html"><img src="AboutMe.png"></a>
+    <a href="javascripts.html"><img src="Javascripts.png"></a>
+    <h1>Welcome to My About Me!</h1>
+   
 </body>
 </html>
