--- a/index.html
+++ b/index.html
@@ -11,9 +11,17 @@
 </head>
 <body>
     <br>
-    <a href="index.html"><img src="Home.png"></a>
-    <a href="aboutme.html"><img src="AboutMe.png"></a>
-    <a href="javascripts.html"><img src="Javascripts.png"></a>
+    <table> 
+        <tr>
+            <a href="index.html"><img src="Home.png"></a>
+        </tr>
+        <tr>
+            <a href="aboutme.html"><img src="AboutMe.png"></a>
+        </tr>
+        <tr>
+            <a href="javascripts.html"><img src="Javascripts.png"></a>
+        </tr>
+    </table>
     <h1>Welcome to My Website!</h1>
     <p>Hello my name is Brendan Marrone. This is a website that I created while taking the CSC 106 class at The University of Rhode Island. This Website contains all of the code that I have written for this class, and all of the projects that I have and will be working on.</p>
 </body>
