--- a/javascripts.html
+++ b/javascripts.html
@@ -9,9 +9,17 @@
 </head>
 <body>
     <br>
-    <a href="index.html"><img src="Home.png"></a>
-    <a href="aboutme.html"><img src="AboutMe.png"></a>
-    <a href="javascripts.html"><img src="Javascripts.png"></a>
+    <table> 
+        <tr>
+            <a href="index.html"><img src="Home.png"></a>
+        </tr>
+        <tr>
+            <a href="aboutme.html"><img src="AboutMe.png"></a>
+        </tr>
+        <tr>
+            <a href="javascripts.html"><img src="Javascripts.png"></a>
+        </tr>
+    </table>
     <h1>Welcome to My Code!</h1>
     
 </body>
