--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     
 <head>
-    <img src="banner.jpeg" height="300">
+    <img src="banner.jpeg">
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
