--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
 </head>
 <body>
     <br>
-    <table> 
+    <table width="100%"> 
         <tr>
-            <a href="index.html"><img src="Home.png"></a>
-        </tr>
-        <tr>
-            <a href="aboutme.html"><img src="AboutMe.png"></a>
-        </tr>
-        <tr>
-            <a href="javascripts.html"><img src="Javascripts.png"></a>
+            <td align="center">
+                <a href="index.html"><img src="Home.png"></a>
+            </td>
+            <td align="center">
+                <a href="aboutme.html"><img src="AboutMe.png"></a>
+            </td>
+            <td align="center">
+                <a href="javascripts.html"><img src="Javascripts.png"></a>
+            </td>
         </tr>
     </table>
     <h1>Welcome to My Website!</h1>
