--- a/javascripts.html
+++ b/javascripts.html
@@ -9,15 +9,17 @@
 </head>
 <body>
     <br>
-    <table> 
+    <table width="110%"> 
         <tr>
-            <a href="index.html"><img src="Home.png"></a>
-        </tr>
-        <tr>
-            <a href="aboutme.html"><img src="AboutMe.png"></a>
-        </tr>
-        <tr>
-            <a href="javascripts.html"><img src="Javascripts.png"></a>
+            <td align="center">
+                <a href="index.html"><img src="Home.png"></a>
+            </td>
+            <td align="center">
+                <a href="aboutme.html"><img src="AboutMe.png"></a>
+            </td>
+            <td align="center">
+                <a href="javascripts.html"><img src="Javascripts.png"></a>
+            </td>
         </tr>
     </table>
     <h1>Welcome to My Code!</h1>
